# loom

./: .gitignore  Cargo.toml  PROJECT.md  README.md
crates/loom-core/: Cargo.toml
crates/loom-core/src/: crypto.rs  lib.rs  network.rs  protocol.rs  storage.rs  token.rs
crates/loom-core/tests/: e2e.rs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
