[package]
name = "loom-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "loom_core"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (Pure Rust)
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake2 = "0.10"
data-encoding = "2.6"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Networking
tokio = { version = "1.38", features = ["full"] }
mdns-sd = "0.11"

# Bindings Generation
uniffi = { version = "0.28", features = ["cli"] }

# Utilities
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.8", features = ["v4"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"

